# SlideScribe

./: .replit  README.md  app.py  pyproject.toml  replit.md  video_processor.py
static/: script.js  style.css
templates/: index.html  processing.html
