[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.3",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pytube>=15.0.0",
    "werkzeug>=3.1.3",
]
